# MCPU-MM

./: .env_example  .gitignore  README.md  __init__.py  pyproject.toml  run_demo_mm.py
harness/: __init__.py  mcp_config.py  mcp_stdio_sse_bridge.py  runner.py  task_env.py  task_spec.py
scripts/: test_video_api.py  youtube_auth.py
tasks/image_filesystem/: docker-compose.yaml  solution.py
tasks/offline_image/image_filesystem/: Dockerfile  docker-compose.yaml  evaluate.py  solution.py  task.yaml
tasks/offline_image/screenshot_task/: docker-compose.yaml  evaluate.py  solution.py  task.yaml
tasks/offline_image/shopping_information/: Dockerfile  docker-compose.yaml  evaluate.py  solution.py  task.yaml
tasks/offline_image/web_understanding/: Dockerfile  docker-compose.yaml  evaluate.py  requirements-mcpuniverse.txt  solution.py  task.yaml
tasks/offline_video/multi_video/: docker-compose.yaml  evaluate.py  task.yaml
tasks/offline_video/video_editing/: docker-compose.yaml  evaluate.py  requirements-mcpuniverse.txt  task.yaml
tasks/offline_video/video_qa/: Dockerfile  docker-compose.yaml  evaluate.py  task.yaml
tasks/online_image/complex_reasoning/: Dockerfile  docker-compose.yaml  evaluate.py  task.yaml
tasks/online_image/event_verification/: docker-compose.yaml  evaluate.py  task.yaml
tasks/online_image/location_identification/: docker-compose.yaml  evaluate.py  task.yaml
tasks/online_image/online_shopping/: docker-compose.yaml  evaluate.py  requirements-mcpuniverse.txt  task.yaml
tasks/online_video_qa_online_courses/: task.yaml
tasks/pdf/: README.md
(+41 files in other folders)
